--- a/Organizer.WebAPI/Web.Release.config
+++ b/Organizer.WebAPI/Web.Release.config
@@ -31,4 +31,17 @@
       </customErrors>
     -->
   </system.web>
+  <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="HTTP to HTTPS redirect" stopProcessing="true" xdt:Transform="Insert">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+          </conditions>
+          <action type="Redirect" redirectType="Permanent" url="https://{HTTP_HOST}/{R:1}" />
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
 </configuration>
