CardCompany views added

--- a/Organizer.WebAPI/Web.Release.config
+++ b/Organizer.WebAPI/Web.Release.config
@@ -32,9 +32,9 @@
     -->
   </system.web>
   <system.webServer>
-    <rewrite>
+    <rewrite xdt:Transform="Insert">
       <rules>
-        <rule name="HTTP to HTTPS redirect" stopProcessing="true" xdt:Transform="Insert">
+        <rule name="HTTP to HTTPS redirect" stopProcessing="true">
           <match url="(.*)" />
           <conditions>
             <add input="{HTTPS}" pattern="off" ignoreCase="true" />
